(library
 (name language)
 (libraries utils primitive z3 prover specification ocaml_parser)
 (modules_without_implementation tinyocaml)
 (modules
   tinyocaml
   oplang
   oplang_interp
   oplang_serialization
   piecewise
   arg_solving
   clientlang
   clientlang_op
   clientlang_tycheck
   of_ocamlast
   bblib
 )
)
