(env
 (dev     (flags (:standard -w +a-4-9-40-41-42-44-45-48-27-32-26-6)))
 (release (flags (:standard -w +a-4-9-40-41-42-44-45-48-27-32-26-6))))

(library
 (name parser)
 (wrapped false)
 (modules_without_implementation past)
 (modules
   lexer
   parse
   parser
   past
 )
  (libraries primitive language utils)
)
