(copy_files# libimp/*.ml{,i})
(library
 (name primitive)
 (modules_without_implementation imp)
 (libraries utils qcheck)
 (modules
   theta
   tp
   value
   value_aux
   operator
   ; library implementation
   imp
   imp_helper
   imp_int
   imp_nat
   imp_list
   imp_tree
   imp_treei
   imp_treeb
   imp_binomialhp
   imp_skewhp
   imp_pairinghp
   imps
   ; library implementation end
   randomgen
   method_predicate
   measure
   ; ifc_instruction
   bihashtab
   inpmap
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv))
)
