(library
 (name commands)
 (libraries utils core language synthesizer parser classify ocaml_parser evaluation zquickcheck analysis ifc LoopInvGen zpie)
 (modules
   caux
   ctest
   csyn
   cmoti
   cparse
   cev
   cbaseline
   ctime
   cifc
   cverify
   cind
   ccoverage
 )
 (preprocess (pps ppx_jane))
)
